test/conformance/chainsaw/verifyImages/clusterpolicy/standard/rollback-image-verification/deployment_old.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx-deployment
  namespace: verify-images
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: ghcr.io/kyverno/test-verify-image-rollback:signed-2
        name: nginx
        resources: {}
