test/conformance/chainsaw/verifyImages/clusterpolicy/standard/rollback-image-verification/02-resource.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: resource
spec:
  timeouts: {}
  try:
  - apply:
      file: deployment_old.yaml
  - apply:
      file: deployment_new.yaml
  - assert:
      file: deployment-assert.yaml
