test/conformance/chainsaw/verifyImages/clusterpolicy/standard/rollback-image-verification/03-test.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: test
spec:
  timeouts: {}
  try:
  - script:
      content: kubectl -n verify-images rollout undo deployment nginx-deployment
